--- a/style.css
+++ b/style.css
@@ -1,13 +1,22 @@
 * {
     box-sizing: border-box;
-    /* border: 1px solid red; */
+    border: 1px solid red;
 }
 body {
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
-    width: 80%;
+    width: 60%;
+    max-width: 600px;
     margin: 20px auto;
 }
+
+.plays-counter {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    width: 450px;
+    margin: 0 auto;
+}
+
 .grid {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
