--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ header h1 {
     font-size: 1.5em;
     padding: 0.7em;
     border-radius: 10px;
-    background-color: #fc594e;
+    background-color: rgba(202, 78, 69, 0.8);
     color: #ffff;
     border: none;
     box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
