--- a/style.css
+++ b/style.css
@@ -9,14 +9,13 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     width: 60%;
     max-width: 600px;
-    margin: 20px auto;
+    margin: 10px auto;
     background: linear-gradient(to right, #ece6b9, #f05070);
-    color:rgba(48, 9, 7, 0.8)
+    color:rgba(48, 9, 7, 0.8);
 }
 
 header {
-    margin: 10px auto;
-    padding: 5px;
+    margin: 0px auto;
 }
 
 header h1 {
@@ -31,44 +30,47 @@ header h1 {
         0 0 92px rgb(255, 119, 109),
         0 0 102px rgb(255, 119, 109);
     letter-spacing: 1.5px;
-    padding: 5px 0;
 }
 
 .counter-wrapper {
-    line-height: 1.5;
-    font-size: 1.3em;
+    line-height: 1;
+    font-size: 1.2em;
+    padding-top: 8px;
 }
 
 .counter-wrapper h2 {
-    font-size: 2.5em;
+    font-size: 2.0em;
+    margin-bottom: 0;
 }
-
 
 .plays-counter {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     width: 450px;
     margin: 0 auto;
+    padding-bottom: 8px;
+}
+
+.turn-message {
+    padding: 8px 0;
 }
 
 .grid {
     display: grid;
     /* grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(3, 1fr); */
-    grid-template-columns: repeat(3, 150px);
-    grid-template-rows: repeat(3, 150px);
-    /* border: 1px solid black; */
-    width: 470px;
-    height: 470px;
+    grid-template-columns: repeat(3, 130px);
+    grid-template-rows: repeat(3, 130px);
+    width: 402px;
+    height: 402px;
     margin: 20px auto;
-    gap: 10px;
-    /* text-align: center; */
+    gap: 7px;
 }
 
 .box {
     font-size: 7em;
-    width: 150px;
-    height: 150px;
+    width: 130px;
+    height: 130px;
     display: grid; 
     align-items: center;
     justify-items: center;
@@ -87,7 +89,7 @@ header h1 {
 .play-again-button {
     display: block;
     margin: 15px auto;
-    font-size: 1.5em;
+    font-size: 1.2em;
     padding: 0.7em;
     border-radius: 10px;
     background-color: rgba(202, 78, 69, 0.8);
