--- a/style.css
+++ b/style.css
@@ -19,10 +19,10 @@ header {
 }
 
 header h1 {
-    font-size: 5em;
-    color: #fff;
+    font-size: 4.7em;
+    color: rgb(252, 245, 245);
     text-shadow:
-        0 0 7px #fff,
+        0 0 7px rgb(252, 245, 245),
         0 0 10px rgb(255, 187, 182),
         0 0 21px rgb(255, 119, 109),
         0 0 42px rgb(255, 119, 109),
@@ -48,7 +48,12 @@ header h1 {
     grid-template-columns: 1fr 1fr 1fr;
     margin: 0 auto;
     padding-bottom: 8px;
+    width: 70%;
 }
+
+/* .player1-win-count .player2-win-count .ties-count {
+    font-weight: 900;
+} */
 
 .turn-message {
     padding: 8px 0;
@@ -71,7 +76,7 @@ header h1 {
     display: grid; 
     align-items: center;
     justify-items: center;
-    background-color: #ffff;
+    background-color: rgb(252, 245, 245);
     border-radius: 15px;
     color: rgba(202, 78, 69, 0.8);
     box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
@@ -82,7 +87,6 @@ header h1 {
     visibility: hidden;
 }
 
-
 .play-again-button {
     display: block;
     margin: 15px auto;
@@ -90,7 +94,7 @@ header h1 {
     padding: 0.7em;
     border-radius: 10px;
     background-color: rgba(202, 78, 69, 0.8);
-    color: #ffff;
+    color: rgb(252, 245, 245);
     border: none;
     box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
     cursor: pointer;
@@ -161,8 +165,7 @@ header h1 {
         max-width: 500px;
         margin: 10px auto;
     }
-    
-    
+
     header h1 {
         font-size: 4em;
         letter-spacing: 1px;
