--- a/style.css
+++ b/style.css
@@ -83,6 +83,10 @@ header h1 {
     visibility: hidden;
 }
 
+.results-message {
+    font-size: 1.2em;
+}
+
 .play-again-button {
     display: block;
     margin: 15px auto;
@@ -156,6 +160,10 @@ header h1 {
         border-radius: 15px;
         box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
     }
+
+    .results-message {
+        font-size: 1em;
+    }
     
     .play-again-button {
         margin: 15px auto;
@@ -166,7 +174,7 @@ header h1 {
     }
 }
 
-@media (min-width: 414px) and (max-width: 703px) {
+@media (min-width: 415px) and (max-width: 703px) {
     body {
         width: 80%;
         max-width: 500px;
@@ -215,11 +223,78 @@ header h1 {
         border-radius: 15px;
         box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
     }
+
+    .results-message {
+        font-size: 1.1em;
+    }
     
     .play-again-button {
         margin: 15px auto;
         font-size: 1.1em;
         padding: 0.7em;
+        border-radius: 10px;
+        box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
+    }
+}
+
+@media (min-width: 1471px) {
+    body {
+        width: 80%;
+        max-width: 1000px;
+        margin: 25px auto;
+    }
+
+    header h1 {
+        font-size: 6em;
+        letter-spacing: 2px;
+    }
+    
+    .counter-wrapper {
+        line-height: 1.2;
+        font-size: 1.5em;
+        padding-top: 10px;
+    }
+    
+    .counter-wrapper h2 {
+        font-size: 2.5em;
+        margin-bottom: 0;
+    }
+    
+    .plays-counter {
+        padding-bottom: 10px;
+        width: 60%;
+    }
+    
+    .turn-message {
+        padding: 10px 0;
+    }
+    
+    .grid {
+        grid-template-columns: repeat(3, 150px);
+        grid-template-rows: repeat(3, 150px);
+        width: 470px;
+        height: 470px;
+        margin: 20px auto;
+        gap: 10px;
+    }
+    
+    .box {
+        font-size: 7em;
+        width: 150px;
+        height: 150px;
+        display: grid; 
+        border-radius: 15px;
+        box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
+    }
+    
+    .results-message {
+        font-size: 1.5em;
+    }
+
+    .play-again-button {
+        margin: 15px auto;
+        font-size: 1.5em;
+        padding: 1em;
         border-radius: 10px;
         box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
     }
